# django-boilerplate

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
app_template/: README.md
app_template/admin/: {{ entity }}_admin.py-tpl
app_template/apis/: urls.py-tpl
app_template/apis/serializers/: {{ entity }}_serializers.py-tpl
app_template/apis/views/: __init__.py-tpl  (+1 more)
app_template/models/: __init__.py-tpl  {{ app_name }}_{{ entity }}_models.py-tpl
apps/app_template/: README.md
apps/auth/: __init__.py  apps.py  signals.py
apps/auth/apis/: urls.py  (+1 more)
apps/document/: apps.py
auth/apis/: urls.py
auth/services/: auth_token_generator_services.py  otp_service.py
common/admins/: __init__.py  base.py  common_state_models_admin.py  common_type_models_admin.py
common/models/: common_state_models.py  common_type_models.py  common_workflow_models.py
core/: settings.py  urls.py
document/: apps.py
document/admin/: document_admin.py
document/apis/: urls.py
document/migrations/: 0001_initial.py
document/models/: __init__.py  document_document_models.py
document/services/: document_service.py
messaging/admin/: __init__.py  messaging_models_admin.py
notification/models/: __init__.py  notification_models.py
notification/services/: email_service.py
scripts/: init_project.py
users/admin/: __init__.py  users_role_admin.py  users_user_admin.py
users/fixtures/: base_roles.json
users/models/: users_permission_models.py  users_role_models.py  users_user_models.py
(+100 files in other folders)
